updated link to favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="/images/logo-favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Leonhard-Schwarz/freecodecamp-product-landing-page/main/images/logo-favicon.ico">
   <link rel="stylesheet" href="styles.css">
   <title>Custom 3D prints - 3D CREATIVES</title>
 </head>
